# AOC_2020

./: .gitignore  pyproject.toml
advent_of_code_2020/: aoc.py  data_tools.py  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  logging.py
resources/day10/: arrangements.md
